tests/ui/did_you_mean/issue-21659-show-relevant-trait-impls-2.stderr
error[E0277]: the trait bound `Bar: Foo<usize>` is not satisfied
  --> $DIR/issue-21659-show-relevant-trait-impls-2.rs:28:12
   |
LL |     f1.foo(1usize);
   |        --- ^^^^^^ the trait `Foo<usize>` is not implemented for `Bar`
   |        |
   |        required by a bound introduced by this call
   |
   = help: the following other types implement trait `Foo<A>`:
             <Bar as Foo<i8>>
             <Bar as Foo<i16>>
             <Bar as Foo<i32>>
             <Bar as Foo<u8>>
             <Bar as Foo<u16>>
             <Bar as Foo<u32>>

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
